manifests/glpi/glpi.yaml
apiVersion: v1
kind: Service
metadata:
  name: glpi
  namespace: glpi
spec:
  selector:
    app: glpi
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi
  namespace: glpi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glpi
  template:
    metadata:
      labels:
        app: glpi
    spec:
      containers:
        - name: glpi
          image: ghcr.io/glpi-project/glpi:11.0.8
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/glpi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: glpi-data
