manifests/glpi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glpi
  namespace: glpi
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
spec:
  ingressClassName: nginx
  rules:
    - host: glpi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glpi
                port:
                  number: 80
